# gene-corder

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  README2.md  README3.md  config.json  correlation_matrix.csv  deseq2.py  dir.txt  env.yml  environment.yml  install.sh  liftoff.py  main.py  main_template.py  pyproject.toml  samp.txt  setup.py  setup.sh  test  test.py  tox.ini
data/samp_obj/: samp_obj_t2g.tsv
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/genecorder/: __init__.py  cli.py  genecorder.py  main.py
src/genecorder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: species_info.json  test.py  test1.ipynb
tests/: __init__.py  test_genecorder.py
