[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genecorder"
version = "0.1.0"
description = "A python package to perform end to end analysis of public RNA-seq datasets of potentially understudied species."
readme = "README.rst"
authors = [
  {name = "Yash Jonjale", email = "yjonjale@gmail.com"}
]
maintainers = [
  {name = "Yash Jonjale", email = "yjonjale@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/yashjonjale/genecorder/issues"
changelog = "https://github.com/yashjonjale/genecorder/blob/master/changelog.md"
homepage = "https://github.com/yashjonjale/genecorder"

[project.scripts]
genecorder = "genecorder.cli:parse_args"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.distutils.bdist_wheel]
universal = true



# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

